JavaScript: - Move entire script into onLoad function call via window.Mozilla.run(onLoad); - DRY Fix: Create variable and remove duplicated code - Check for Footer before adding footer/z-index fix
Testing:
- Add back html/loaded class check in the wait_for_page_to_load function

CSS:
- Rename footer/z-index class name to be more descriptive, add documentation comment

--- a/media/css/protocol/components/_footer.scss
+++ b/media/css/protocol/components/_footer.scss
@@ -4,7 +4,8 @@
 
 @import '../../../protocol/css/includes/lib';
 
-.mzp-c-footer.sticky-overlay {
+// This class is added to address an issue with the sticky promo component on specific pages overlapping the language selection box in the footer.
+.mzp-c-footer.is-intersecting-sticky-overlay {
     position: relative;
     z-index: 11;
 }
